--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 librosa~=0.9.2
-torch
+torch~=1.13.1
 
 Flask~=2.2.2
 numpy~=1.23.5
 pandas~=1.5.2
 scipy~=1.9.3
 torch~=1.13.1
+soundfile~=0.11.0
+gunicorn==20.1.0
